Massive drop of latest changes

--- a/istio/yaml/002-multicluster-region-one.yaml
+++ b/istio/yaml/002-multicluster-region-one.yaml
@@ -5,6 +5,6 @@ spec:
     global:
       meshID: azure
       multiCluster:
-        clusterName: westeurope-aks
+        clusterName: aks-cluster-one
         enabled: true
       network: network1
