--- a/istio/yaml/virtualservice.yaml
+++ b/istio/yaml/virtualservice.yaml
@@ -4,6 +4,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: echoserver
+  namespace: istio-ingress
 spec:
   hosts:
     - x.x.x.x.nip.io
