--- a/istio/yaml/002-multicluster-region-two.yaml
+++ b/istio/yaml/002-multicluster-region-two.yaml
@@ -5,6 +5,6 @@ spec:
     global:
       meshID: azure
       multiCluster:
-        clusterName: eastus-aks
+        clusterName: aks-cluster-two
         enabled: true
       network: network1
