--- a/istio/yaml/ingress.yaml
+++ b/istio/yaml/ingress.yaml
@@ -3,9 +3,9 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: istio-ingress-application-gateway
-  annotations:
-     kubernetes.io/ingress.class: azure/application-gateway
+  namespace: istio-ingress
 spec:
+  ingressClassName: azure-application-gateway
   rules:
   - http:
       paths:
